@@ -392,11 +392,19 @@ Content-Type {text/plain;charset=utf-8}
 Accept-Encoding .*
 Content-Length 5}
 test http-3.29 "http::geturl $ipv6url" -body {
-    set token [http::geturl $ipv6url -validate 1]
-    http::code $token
+    # We only want to see if the URL gets parsed correctly. This is
+    # the case if http::geturl succeeds or returns a socket related
+    # error. If the parsing is wrong, we'll get a parse error.
+    # It'd be better to separate the URL parser from http::geturl, so
+    # that it can be tested without also trying to make a connection.
+    set error [catch {http::geturl $ipv6url -validate 1} token]
+    if {$error && [string match "couldn't open socket: *" $token]} {
+            set error 0
+    }
+    set error
 } -cleanup {
-    http::cleanup $token
-} -result "HTTP/1.0 200 OK"
+    catch { http::cleanup $token }
+} -result 0
 
 test http-4.1 {http::Event} -body {
     set token [http::geturl $url -keepalive 0]
